# controller/reservation_controller/reservation.go
@@ -20,6 +20,14 @@ func NewControllerReservation(service *service.AllService, log *zap.Logger) Cont
 	return ControllerReservation{Service: service, Log: log}
 }
 
+// @Summary Get All Reservation
+// @Description Endpoint For All Reservation
+// @Tags Reservation
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} helper.Response{data=[]model.Reservation} "Get Summary Success"
+// @Failure 500 {object} helper.Response "server error"
+// @Router  /reservation [get]
 func (ctrl *ControllerReservation) GetAll(ctx *gin.Context) {
 	date := ctx.Query("date")
 	data, err := ctrl.Service.Reservation.GetAll(date)
@@ -30,6 +38,15 @@ func (ctrl *ControllerReservation) GetAll(ctx *gin.Context) {
 	}
 	helper.Responses(ctx, http.StatusOK, "Get Reservations success", data)
 }
+
+// @Summary Get Detail Reservation
+// @Description Endpoint For Detail Reservation
+// @Tags Reservation
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} helper.Response{data=model.Reservation} "Get Summary Success"
+// @Failure 500 {object} helper.Response "server error"
+// @Router  /reservation/{id} [get]
 func (ctrl *ControllerReservation) GetById(ctx *gin.Context) {
 	var reservation model.Reservation
 	id, _ := strconv.Atoi(ctx.Param("id"))
@@ -43,6 +60,16 @@ func (ctrl *ControllerReservation) GetById(ctx *gin.Context) {
 	// fmt.Println(reservation.TableID, "*****")
 	helper.Responses(ctx, http.StatusOK, "Get Reservation success", reservation)
 }
+
+// @Summary Create a new Reservation
+// @Description Create a new reservation.
+// @Tags Reservation
+// @Accept json
+// @Produce json
+// @Success 201 {string} helper.Response{data=model.Reservation} "Reservation successfully created"
+// @Failure 400 {object} helper.Response "Invalid form data"
+// @Failure 500 {object} helper.Response "Internal Server Error"
+// @Router /reservation [post]
 func (ctrl *ControllerReservation) Create(ctx *gin.Context) {
 	var reservation model.Reservation
 	err := ctx.ShouldBindJSON(&reservation)
@@ -59,6 +86,16 @@ func (ctrl *ControllerReservation) Create(ctx *gin.Context) {
 	}
 	helper.Responses(ctx, http.StatusCreated, "Create Reservation success", reservation)
 }
+
+// @Summary edit existing Reservation
+// @Description edit existing reservation.
+// @Tags Reservation
+// @Accept json
+// @Produce json
+// @Success 201 {string} helper.Response{data=model.Reservation} "Reservation successfully updated"
+// @Failure 400 {object} helper.Response "Invalid form data"
+// @Failure 500 {object} helper.Response "Internal Server Error"
+// @Router /reservation [put]
 func (ctrl *ControllerReservation) Edit(ctx *gin.Context) {
 	var reservation model.Reservation
 	id, _ := strconv.Atoi(ctx.Param("id"))
